--- a/round/brocade.html
+++ b/round/brocade.html
@@ -1,22 +1,12 @@
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>Wreath of Victory Free Crochet Pattern</title></head>
+<html><head><title>Brocade Doily - Free Crochet Pattern</title>
+</head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1DzzoWcekL8PtrbRNCSnjb8aR7pdZvD28&export=download"><img src="images/brocade.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Wreath of Victory Free Crochet Doily Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Brocade Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b><br> 
-
-
 J. & P. COATS "BIG BALL" BEST SIX CORD MERCERIZED CROCHET, Art. A.105,
 <br>Size 20: 1 ball of No. 1 White or No. 61 Ecru; or
 <br>CLARK'S "BIG BALL" MERCERIZED CROCHET</b>,<br> Art. B.34, Size 20: 1 ball of No. 1 White, No. 61 Ecru or No. 42 Cream;
@@ -52,21 +42,8 @@ J. & P. COATS "BIG BALL" BEST SIX CORD MERCERIZED CROCHET, Art. A.105,
 <br><b>25th rnd:</b> Starting cluster in sp just formed, * ch 5, in next loop make (cluster, ch 5) 4 times; cluster in next ch-1 sp between the 2 clusters. Repeat from * around, ending with ch 5. Join.
 <br>Break off and fasten. Starch lightly and press.
 <br>Doily measures 15 inches in diameter.
-
- 
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 </font> 
 </td></tr></table></center>
