--- a/round/cathedral.html
+++ b/round/cathedral.html
@@ -2,20 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Cathedral Window Free Crochet Doily Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1UqqCIOhSA62HkQ2VXLm_L5EORIu7JaBU&export=download"><img src="images/cathedral.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Cathedral Window Free Crochet Doily Pattern</b></font><br><br>
-<font face="verdana" size="2"><b>MATERIALS:</b><br> 
-AMERICAN THREAD COMPANY The Famous "PURITAN'' MERCERIZED CROCHET COTTON, Article 40 1 ball each White and Shaded Pinks or the Famous "PURITAN'' STAR SPANGLED MERCERIZED CROCHET COTTON, Article 40 2 balls each Silver Spangle and Red Spangle or colors of your choice. Steel Crochet Hook No. 7 App. size: 15 1/2 inches in diameter for "PURITAN" 17 1/2 inches in diameter for "PURITAN" STAR SPANGLED 
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Cathedral Window Doily</span></font><br><br>
+<font face="verdana" size="2"><b>MATERIALS:</b>
+<br>AMERICAN THREAD COMPANY The Famous "PURITAN'' MERCERIZED CROCHET COTTON, Article 40 1 ball each White and Shaded Pinks or the Famous "PURITAN'' STAR SPANGLED MERCERIZED CROCHET COTTON, Article 40 2 balls each Silver Spangle and Red Spangle or colors of your choice. Steel Crochet Hook No. 7 App. size: 15 1/2 inches in diameter for "PURITAN" 17 1/2 inches in diameter for "PURITAN" STAR SPANGLED 
 <br><B>With White or Silver Spangle</b> chain (ch) 10, join to form a ring.
 <br><b>2nd Round:</b> * Ch 20, single crochet (sc) in ring, repeat from * 11 times.
 <br><b>3rd Round:</b> 10 sc, ch 5, 10 sc in each loop.
@@ -42,18 +33,7 @@ crochet (d trc: 3 times over hook) in same space, ch 3, treble treble crochet (t
 pull thread through, thread over and work off all loops at one time, 5 sc in next loop, 2 sc in next loop, picot, sc in same 
 loop, 5 sc in next loop, picot, repeat from * all around ending to correspond, join, cut thread.
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 </font> 
 </td></tr></table></center>
