--- a/round/greenpink.html
+++ b/round/greenpink.html
@@ -2,20 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Green Pink Doily - Free Crochet Patterns</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1LAmXRw66zdsQBHEICu4IwxKYrrhSBMA3&export=download"><img src="images/greenpink.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Green Pink Doily - Free Crochet Pattern</b></font><br><br>
-<font face="verdana" size="2"><b>MATERIALS:</b><br> 
-AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40 1 Ball White; andThe Famous "PURITAN" STAR SPANGLED MERCERIZED CROCHET COTTON, Article 40 1 Ball each Pink Spangle and Chartreuse Spangle or colors of your choice If desired "Puritan" Mercerized Crochet Cotton or "Puritan" Star Spangled may be used throughout.
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Green Pink Doily</span></font><br><br>
+<font face="verdana" size="2"><b>MATERIALS:</b>
+<br>AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40 1 Ball White; andThe Famous "PURITAN" STAR SPANGLED MERCERIZED CROCHET COTTON, Article 40 1 Ball each Pink Spangle and Chartreuse Spangle or colors of your choice If desired "Puritan" Mercerized Crochet Cotton or "Puritan" Star Spangled may be used throughout.
 Steel crochet hook No. 7 Approximate size: 13 inches in diameter.
 <br><br>
 <b>1st Round:</b> With White ch 6, join to form a ring, ch 3 and work 15 dc in ring, join in 3rd st of ch.
@@ -49,18 +40,7 @@ top of 1st rice st, cut thread.
 st in top of trc for picot, ch 4, rice st in 4th st from hook, sl st in next ch 1 space, ch 4, rice st in 4th st from hook, ch 4, sl st in 4th st from hook for picot, ch 4, rice st in 4th st from hook, sl st in next ch 1 space, repeat from * all around ending to correspond, join in 1st rice st, cut thread.
 
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 </font> 
 </td></tr></table></center>
