--- a/round/pond.html
+++ b/round/pond.html
@@ -2,20 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Pond Lily Free Crochet Doily Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1xHkSLnBgov3ZpkvpFeEU588sTSxAMJ8t&export=download"><img src="images/pond.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Pond Lily Free Crochet Doily Pattern</b></font><br><br>
-<font face="verdana" size="2"><b>MATERIALS:</b><br> 
-The Famous "PURITAN" STAR SPANGLED MERCERIZED CROCHET COTTON, Article 40, 3 balls Silver Spangle or The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40, 2. balls White.
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Pond Lily Doily</span></font><br><br>
+<font face="verdana" size="2"><b>MATERIALS:</b>
+<br>The Famous "PURITAN" STAR SPANGLED MERCERIZED CROCHET COTTON, Article 40, 3 balls Silver Spangle or The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40, 2. balls White.
 <br>Steel Hook No. 7.
 <br>
 Approx.size: 16 inches in diameter for "PURITAN" STAR SPANGLED, 15 inches in diameter for "PURITAN".
@@ -56,18 +47,7 @@ Approx.size: 16 inches in diameter for "PURITAN" STAR SPANGLED, 15 inches in dia
 
 <br><b>18th Round:</b> Sl st to center of next loop, ch 4, cluster st in same space, ** ch 7, sl st in 4th st from hook for picot, ch 3, sc in next loop, ch 5, sl st in 4th st from hook for picot, ch 1, * trc in next trc, ch 5, sl st in 4th st from hook for picot, ch 1, repeat from * 3 times, trc in center st of next loop, ch 1, ch 4 picot, ch 1, trc in same st of same loop, * ch 1, ch 4 picot, ch 1, trc in next trc, repeat from * 3 times, ch 1, ch 4 picot, ch 1, sc in next loop, ch 3, ch 4 picot, ch 3, keeping last loop of each st on hook work 4 trc in center st of each of the next 2 loops, thread over and work off all loops at one time, ch 4, sl st in top of st just made, ch 3, ch 4 picot, ch 3, sc in next loop, * ch 1, ch 4 picot, ch 1, trc in next trc, repeat from * twice, ch 1, ch 4 picot, ch 1, trc in center st of next loop, ch 1, ch 4 picot, ch 1, trc in same st of same loop, * ch 1, ch 4 picot, ch 1, trc in next trc, repeat from * twice, ch 1, ch 4 picot, ch 1, sc in next loop, ch 3, ch 4 picot, ch 3, keeping last loop of each st on hook work 4 trc in center st of each of the next 2 loops, thread over and work off all loops at one time, ch 4, sl st in top of st just made, repeat from ** all around ending last repeat with cluster st in last loop, join to 1st cluster st, ch 4 picot in joining, cut thread.
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 </font> 
 </td></tr></table></center>
