--- a/round/ecrocus.html
+++ b/round/ecrocus.html
@@ -2,20 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Early Crocus Free Crochet Doily Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1pfi-Wi94CXP46DT08LeM0BfpbbEi9rHs&export=download"><img src="images/ecrocus.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Early Crocus Free Crochet Doily Pattern</b></font><br><br>
-<font face="verdana" size="2"><b>MATERIALS:</b><br> 
-J. & P. COATS "BIG BALL" BEST SIX CORD MERCERIZED CROCHET, Art. A.104, Size 30: 1 ball of No. 1 White, No. 61 Ecru or No. 42 Cream; or CLARK'S "BIG BALL" MERCERIZED CROCHET, Art. B.34, Size 30: 1 ball of No. 1 White, No. 61 Ecru or No. 42 Cream; or 
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Early Crocus Doily</span></font><br><br>
+<font face="verdana" size="2"><b>MATERIALS:</b>
+<br>J. & P. COATS "BIG BALL" BEST SIX CORD MERCERIZED CROCHET, Art. A.104, Size 30: 1 ball of No. 1 White, No. 61 Ecru or No. 42 Cream; or CLARK'S "BIG BALL" MERCERIZED CROCHET, Art. B.34, Size 30: 1 ball of No. 1 White, No. 61 Ecru or No. 42 Cream; or 
 CLARK'S "BIG BALL" MERCERIZED CROCHET, Art. B.345, Size 30: 1 ball of White or Ecru. 
 <br>Milwards Steel Crochet Hook No. 10. 
 <br>Doily measures 14 inches in diameter 
@@ -48,18 +39,7 @@ CLARK'S "BIG BALL" MERCERIZED CROCHET, Art. B.345, Size 30: 1 ball of White or E
 
  
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 </font> 
 </td></tr></table></center>
