--- a/round/fan.html
+++ b/round/fan.html
@@ -2,20 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Shell Fan Doily - Free Crochet Pattern </title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=14uHPgH597oTRcmd84Q2jiuYW-4bYjzBD&export=download"><img src="images/fan.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Shell Fan Doily Pattern</b></font><br><br>
-<font face="verdana" size="2"><b>MATERIALS:</b><br>
- AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON or "GIANT" MERCERIZED CROCHET COTTON 1 Ball White 
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Shell Fan Doily</span></font><br><br>
+<font face="verdana" size="2"><b>MATERIALS:</b>
+<br> AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON or "GIANT" MERCERIZED CROCHET COTTON 1 Ball White 
 <br>Steel Crochet Hook No. 7 
 <br>Approximate Size: 14 inches in diameter 
 <br><b>1st ROUND:</b> * Ch 4, dc  in 4th st from hook (rice st), repeat from * 5 times, join to 1st rice st. 
@@ -39,18 +30,7 @@
 
  
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 </font> 
 </td></tr></table></center>
