--- a/round/links.html
+++ b/round/links.html
@@ -2,20 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Free Crochet Pattern - Lacy Links Doily </title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=18vOcBdVZ_UGReJHy_S2Xxw1GM24wSR0x&export=download"><img src="images/links.jpg" align="right"  width="400" height="420" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Lacy Links - Free Crochet Doily Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Lacy Links Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-J. & P. COATS BIG BALL BEST SIX CORD MERCERIZED CROCHET, Art. A.104, Size 50: 2 balls of Ecru. 
+<br>J. & P. COATS BIG BALL BEST SIX CORD MERCERIZED CROCHET, Art. A.104, Size 50: 2 balls of Ecru. 
 <br>Milwards Steel Crochet Hook NO. 12. 
 <br>Doily measures 15 inches in diameter 
 <br><b>Starting at center:</b> Ch 25. Join with sl st to form ring. 
@@ -33,18 +24,7 @@ J. & P. COATS BIG BALL BEST SIX CORD MERCERIZED CROCHET, Art. A.104, Size 50: 2 
 <br><b>46th rnd:</b> *Ch 3, sc in next loop. Repeat from * around. Join. 
 <br><b>47th rnd:</b> In each loop around, make sc, ch 3 and sc. Join and break off. Starch lightly and press. 
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 </font> 
 </td></tr></table></center>
