--- a/round/scallop.html
+++ b/round/scallop.html
@@ -2,21 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Sea Scallop Free Crochet Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1oZ6SHq2_6feVRK0fo_bCDC-LkoLRlxZp&export=download"><img src="images/scallop.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Sea Scallop Crochet Doily Pattern Free Crochet Doily Pattern</b></font><br><br>
-<font face="verdana" size="2"><b>MATERIALS:</b><br> 
-
- AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED STAR SPANGLED CROCHET COTTON, Article 40 4 balls Silver Spangle or The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40 2 balls White or color of your choice Steel Crochet hook No. 7 App. size: 19 1/2 inches in diameter for "PURITAN" STAR SPANGLED; 19 l/2 inches in diameter for "PURITAN"
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Sea Scallop Doily</span></font><br><br>
+<font face="verdana" size="2"><b>MATERIALS:</b>
+<br>AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED STAR SPANGLED CROCHET COTTON, Article 40 4 balls Silver Spangle or The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40 2 balls White or color of your choice Steel Crochet hook No. 7 App. size: 19 1/2 inches in diameter for "PURITAN" STAR SPANGLED; 19 l/2 inches in diameter for "PURITAN"
 <br><b>1st Round:</b> Chain (ch) 5, slip stitch (sl st) in 1st stitch (st) of ch for picot, ch 4, 3 double crochet (dc) in 1st st of ch, repeat from beginning 3 times, join.
 <br><b>2nd Round:</b> Ch 7, double treble crochet (d trc: 3 times over hook) in same space, * ch 2, d trc in same space, repeat from * 7 times, * 9 d trc with ch 2 between each d trc in next picot, repeat from * twice, join.
 <br><b>3rd Round:</b> 2 single crochet (sc) in same loop, * ch 1, 2 sc in next loop, repeat from * 6 times, ch 1, * 2 sc in next loop, ch 1, repeat from * 7 times, complete round to correspond, join in 1st sc.
@@ -38,18 +28,7 @@
 
  
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 </font> 
 </td></tr></table></center>
