--- a/round/thegift.html
+++ b/round/thegift.html
@@ -2,18 +2,9 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>The Gift Doily - Free Crochet Patterns</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1eF08CKx22WqzNQdF3GvYiKF0Jo3EF3El&export=download"><img src="images/thegift.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>The Gift Doily - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">The Gift Doily</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b><br> 
 AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40 or "DE LUXE" Quality MERCERIZED CROCHET COT-TON, Article 346 1 ball each Shaded Nile Greens and White or colors of your choice. 
 <br>Steel crochet hook No. 7 
@@ -38,18 +29,7 @@ AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 
 <br><b>18th Round:</b> Ch 3, dc in next dc, * ch 4, sl st in 3rd st from hook for picot, ch 1, dc in next loop, repeat from * once, ch 4, sl st in 3rd st from hook for picot, ch 1, dc in same loop, ch 4, sl st in 3rd st from hook for picot, ch 1, dc in next loop, ch 4, sl st in 3rd st from hook for picot, ch 1, 1 dc in each of the next 2 dc, 1 dc in each of the next 2 dc, repeat from 1st * all around ending to correspond, join, cut thread. 
 
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 </font> 
 </td></tr></table></center>
