--- a/round/victory.html
+++ b/round/victory.html
@@ -2,20 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Wreath of Victory Free Crochet Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1jMoKjqWzYGXqXUprNcEY6OXyCxgC3oqL&export=download"><img src="images/victory.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b>Wreath of Victory Free Crochet Doily Pattern</b></font><br><br>
-<font face="verdana" size="2"><b>MATERIALS:</b><br> 
-AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40, 2 balls White, Cream or Ecru or The Famous "PURITAN" STAR SPANGLED MERCERIZED CROCHET COTTON, Article 40, 6 balls Silver Spangle or color of your choice.
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Wreath of Victory Doily</span></font><br><br>
+<font face="verdana" size="2"><b>MATERIALS:</b>
+<br>AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40, 2 balls White, Cream or Ecru or The Famous "PURITAN" STAR SPANGLED MERCERIZED CROCHET COTTON, Article 40, 6 balls Silver Spangle or color of your choice.
 <br>Approx. size: 22 inches in diameter for "PURITAN"; 26 1/2 inches in diameter for "PURITAN" STAR SPANGLED
 <br> Steel Crochet Hook No. 7
 <br><b>1st Round:</b> Chain (ch) 10, join to form a ring, ch 4 (counts as 1st treble crochet [trc] of 1st cluster), keeping last loop of each stitch (st) on hook work 3 trc in ring, thread over and work off all loops at one time, * ch 4, 4 trc cluster st in ring (4 trc cluster st: keeping last loop of each st on hook work 4 trc in same space, thread over and work off all loops at one time), repeat from * 6 times, ch 4, join in top of 1st cluster.
@@ -46,23 +37,8 @@ AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 
 <br><b>26th Round:</b> Sl st to next loop, ch 4, complete 4 trc cluster, ** ch 4, trc in next trc, ch 4, * trc in next loop, ch 4, repeat from * 4 times, trc in next trc, ch 4, one 4 trc cluster in each of the next 2 loops, repeat from ** all around ending to correspond, join.
 <br><b>27th Round:</b> Sl st to next loop, ch 4, complete 4 trc cluster, ** ch 4, * trc in next loop, ch 4, repeat from * 5 times, one 4 trc cluster in each of the next 2 loops, repeat from ** all around ending to correspond, join.
 <br><b>28th Round:</b> Ch 4, sl st in same space for picot, ** ch 4, double crochet (dc) in next trc, ch 4, sl st in top of dc for picot, * ch 4, trc in next trc, ch 4, sl st in top of trc for picot, repeat from * 3 times, ch 4, dc in next trc, ch 4, sl st in top of dc for picot, ch 4, single crochet (sc) between next two 4 trc clusters, ch 4, sl st in sc for picot, repeat from ** all around ending to correspond, join, cut thread.
-
-
-
- 
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 </font> 
 </td></tr></table></center>
