--- a/ruffle.html
+++ b/ruffle.html
@@ -33,6 +33,7 @@
                 <li><a href="pineapple.html">Pineapple Doily Patterns</a></li>
 				<li><a href="ruffle.html"><font color="#ff0066"><b>Ruffle Doily Patterns</b></font></a></li>
 				<li><a href="tablecloths.html">Tablecloth Patterns</a></li>
+				<li><a href="https://doilybox.blogspot.com">Our Blog</a></li>
                 <li><a href="index.html">HOME</a></li>
        
             </ul>
