--- a/afghans/cob.html
+++ b/afghans/cob.html
@@ -1,14 +1,11 @@
-
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Cobbled Street Afghan Pattern - Free Crochet Cotton Pattern</title></head>
-<body>
-<center><table width="90%" border="0"><tr><td><br>
+<body><center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1SQi9sqwuM4essoVKpHTGdpjfXq0utm9X&export=download&export=download">
 <img src="images/cob.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="verdana" color="#006699" size="4"><span style="font-weight:bold;">Cobbled Street Pattern</span></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Cobbled Street Afghan</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-<br>
-COATS & CLARK'S "RED HEART" KNITTING WORSTED, 4 Ply ("Tangle-Proof" Pull-Out Skeins): 26 ounces of No. 649 Olive Green; 20 ounces each of No. 253 Tangerine and No. 230 Yellow. 
+<br>COATS & CLARK'S "RED HEART" KNITTING WORSTED, 4 Ply ("Tangle-Proof" Pull-Out Skeins): 26 ounces of No. 649 Olive Green; 20 ounces each of No. 253 Tangerine and No. 230 Yellow. 
 <br>Crochet Hook Size G. 
 <br>Afghan measures 45 x 67 1/2 inches (excluding border). Each motif measures 4 1/2 inches square. 
 <br><b>GAUGE:</b> 4 sc = 1. inch; 4 rows = 1 inch. 
@@ -28,20 +25,7 @@ COATS & CLARK'S "RED HEART" KNITTING WORSTED, 4 Ply ("Tangle-Proof" Pull-Out Ske
 <br><b>Next 4 rnds:</b> Sc in joining, making 3 sc in the back loop of the 2nd sc of each corner group, sc in the back loop of each sc around. Join. Ch 1, turn. 
 <br><b>6th rnd:</b> Working through both loops of each sc, sl st in each sc around. Join. Break off and fasten. Block to measurements. 
 </font>
-
-<br><br><br>
-<center>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
-     style="display:inline-block;width:940px;height:60px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="7284094464"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script></center>
-<br><br><br>
-<a href="http://www.doilybox.com"><font face="verdana" size="5" color="#648464">HOME</font></a>
-<br><br>
+<br><br><a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 </td></tr></table></center>
 </body></html>
 
