--- a/afghans/color.html
+++ b/afghans/color.html
@@ -1,14 +1,12 @@
-
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>The Big Colorful Throw Pattern - Free Crochet Cotton Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1IOnP_prfQ-C-5XVNmKAjaY_nENkJWU5k&export=download&export=download">
 <img src="images/color.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="verdana" color="#006699" size="4"><span style="font-weight:bold;">The Big Colorful Throw Pattern</span></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">The Big Colorful Throw Afghan</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-<br>
-AMERICAN THREAD "AUNT LYDIA'S" HEAVY RUG YARN 
+<br>AMERICAN THREAD "AUNT LYDIA'S" HEAVY RUG YARN 
 <br>1-70 yd. skein Yellow
 <br>2-70 yd. skeins Chartreuse 
 <br>4-70 yd. skeins Orange 
@@ -28,19 +26,13 @@ and
 <br><b>7th Rnd:</b> Ch 3, 1 dc in each of next 3 sts, 3 dc in next st, * 1 dc in each of next 8 sts, 3 dc in next st, repeat from * all around ending 1 dc in each of next 4 sts, join. 
 <br><b>8th Rnd:</b> Ch 3, 1 dc in each of next 4 sts, 3 dc in next st, * 1 dc in each of next 10 sts, 3 dc in next st, repeat from * all around ending 1 dc in each of next 5 sts, join, cut yarn. 
 <br><b>9th Rnd:</b> Attach White, work 1 s c in each st and 3 sc in each corner st, join, cut yarn.
-<br>
-Work 23 more motifs working from 3rd to 8th Rnds in assorted colors.
-<br><b>
-JOINING MOTIFS:</b> With Yellow work 1st Rnd colors same as Motif. 
+<br>Work 23 more motifs working from 3rd to 8th Rnds in assorted colors.
+<br><b>JOINING MOTIFS:</b> With Yellow work 1st Rnd colors same as Motif. 
 <br><b>2nd Rnd:</b> Attach Chartreuse and work same as 2nd Rnd of motif. 
 <br><b>3rd Rnd:</b> Attach White in any ch 2 loop, ch 4, 1 tr c, 5 dc in same loop, * 5 dc, 2 tr c in next loop, 2 tr c, 5 dc in next loop, repeat from * twice, 5 dc, 2 tr c in next loop, join, cut yarn. Work 14 more joining motifs to correspond.
-
 <br><b>FINISHING:</b> Sew motifs tog through back loops of sts, and sew joining motifs in each space as illustrated.
-
 <br><b>POMPONS:</b> Open skein of White, cut one end. Cut Carpet and But­ton Thread into 18 inch lengths, fold thread in half, and tie skein tightly at 1 inch intervals. Cut between tying. Shape and trim pompons. Attach 1 pompon to each point of all motifs and tie 2 pompons spaced evenly between all points.
-<br><b>
-PILLOWS
-
+<br><b>PILLOWS:
 <br>Materials Required:</b> 
 <br>AMERICAN THREAD "AUNT LYDIA'S"
 HEAVY RUG YARN
@@ -51,21 +43,8 @@ HEAVY RUG YARN
 <br><br>
 Work 2 motifs of any 2 main col­ors same as bedspread. Sew motifs tog leaving an opening. Fill with kapok or shredded foam rubber. Sew opening closed. Finish with pompons or if desired omit pompons.
 </font>
-
 <br><br>
-<br>
-<center>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
-     style="display:inline-block;width:940px;height:60px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="7284094464"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script></center>
-<br><br><br>
-<a href="http://www.doilybox.com"><font face="verdana" size="5" color="#648464">HOME</font></a>
-<br><br>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 </td></tr></table></center>
 </body></html>
 
