--- a/afghans/park.html
+++ b/afghans/park.html
@@ -1,13 +1,11 @@
-
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>Park Avenue Afghan Pattern - Free Crochet Cotton Pattern</title></head>
-<body>
-<center><table width="90%" border="0"><tr><td><br>
+<html><head><title>Park Avenue Afghan Pattern - Free Crochet Cotton Patterns</title></head>
+<body><center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1RV_n-wrbQ8BLFLN0g8M-XiVL0w4ep6dz&export=download&export=download">
 <img src="images/park.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="verdana" color="#006699" size="4"><span style="font-weight:bold;">Park Avenue Afghan Pattern</span></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Park Avenue Afghan</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-<br>COATS & CLARK'S RED HEART ® KNITTING WORSTED, 4 Ply ("Tangle-Proof" Pull-Out Skeins): 36 ounces of No. 679 Nile Green and 8 ounces of No. 676 Emerald Green. 
+<br>COATS & CLARK'S RED HEART  KNITTING WORSTED, 4 Ply ("Tangle-Proof" Pull-Out Skeins): 36 ounces of No. 679 Nile Green and 8 ounces of No. 676 Emerald Green. 
 <br>Crochet Hook, Size G. Afghan measures 52 x 59 inches, excluding fringe. Each strip, including border, measures 8 3/4 x 59 inches. 
 <br><b>GAUGE:</b> 4 dc = 1 inch; 2 rows = 1 1/4 inches. 
 <br>Be sure to check your gauge before starting afghan. Use any size hook which will obtain the stitch gauge above. 
@@ -19,20 +17,7 @@ dc). Repeat from * across to within last end sp, ch 2, in last end sp make clust
 <br><b>2nd rnd:</b> Sl st loosely in front loop of each st and each ch around. Join. Break off and fasten. Block to measurements. Being careful to keep all strips in one direction, sew strips lengthwise together, leaving the corner clusters free at both ends. 
 <br><b>FRINGE:</b> Cut 2 strands of Nile Green, each 12 inches long. Double these strands to form a loop. Insert hook in back loop of the sl st directly over the first corner cluster and draw loop through. Draw loose ends through loop and pull up tightly to form a knot. Knot 2 strands as before in every other sl st along narrow end and in joining between strips. Work fringe along opposite edge in same way. Trim evenly. 
 </font>
-
-<br><br><br>
-<center>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
-     style="display:inline-block;width:940px;height:60px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="7284094464"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script></center>
-<br><br><br>
-<a href="http://www.doilybox.com"><font face="verdana" size="5" color="#648464">HOME</font></a>
-<br><br>
+<br><br><a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 </td></tr></table></center>
 </body></html>
 
