--- a/afghans/shells.html
+++ b/afghans/shells.html
@@ -1,13 +1,11 @@
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Cockleshells Afghan Pattern - Free Crochet Cotton Pattern</title></head>
-<body>
-<center><table width="90%" border="0"><tr><td><br>
+<body><center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1TiyoNLhrVf3pwiLnwD3IA-pXfq37UyCu&export=download&export=download"><img src="images/shell.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Cockleshells Afghan - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Cockleshells Afghan</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-<br>
-COATS & CLARK'S "RED HEART" KNITTING WORSTED, 4 Ply (4 oz. "Tangle-Proof" Pull-Out Skeins): 9 skeins of No. 1 White; 4 skeins each of No. 760 Wine Rose and No. 835 Periwinkle. <br>Crochet Hook Size H. <br>Afghan measures 45 x 62 inches 
+<br>COATS & CLARK'S "RED HEART" KNITTING WORSTED, 4 Ply (4 oz. "Tangle-Proof" Pull-Out Skeins): 9 skeins of No. 1 White; 4 skeins each of No. 760 Wine Rose and No. 835 Periwinkle. <br>Crochet Hook Size H. <br>Afghan measures 45 x 62 inches 
 <br><b>GAUGE:</b> 2 sc and 2 shells = 2 1/2 inches; 2 rnds = 1 inch. <br><br>Starting at center with White, ch 115 to measure 23 inches. 
 <br><b>1st rnd:</b> Sc in 3rd ch from hook, (ch 1, sc in next ch) twice; sc in next 108 ch, (ch 1, sc in next ch) twice; working along opposite side of starting chain, ch 1, sc in same ch as last sc, (ch 1, sc in next ch) twice; sc in next 108 ch, (ch 1, sc in next ch) twice. Join with sl st to first ch-2 sp. 
 <br><b>2nd rnd:</b> Ch 3, in same place as sl st make 2 dc, ch 1 and 3 dc - a starting shell made; sc in next ch-1 sp, in next ch-1 sp make 3 dc, ch 1 and 3 dc - shell made; skip next 3 sc, sc in next sc, (skip next 2 sc, shell in next sc, skip next 2 sc, sc in next sc) 17 times; skip next 3 sc, (shell in next ch-1 sp, sc in next ch-1 sp) twice; shell in next ch-1 sp, skip next 3 sc, sc in next sc, (skip next 2 sc, shell in next sc, skip next 2 sc, sc in next sc) 17 times; shell in next ch-1 sp, sc in next ch-1 sp. Join with sl st to top of starting ch-3. Break off and fasten. Turn. Hereafter pick up back loop only of each sc throughout. 
@@ -19,15 +17,8 @@ COATS & CLARK'S "RED HEART" KNITTING WORSTED, 4 Ply (4 oz. "Tangle-Proof" Pull-O
 <br><b>6th rnd:</b> Complete a starting shell in last joining, then work same as last rnd. Join, break off and fasten. Turn. 
 <br><b>7th rnd:</b> Attach Rose to the sp of the center shell on a narrow end, ch 1, sc in same place, * make a shell in each sc, sc in each shell to within the sc in line with marked sp on previous inc shell, make an inc shell in this sc - mark center sp. Repeat from * 3 more times; sc in sp of each shell, shell in each sc to end of rnd. Join, break off and fasten. Turn. 
 <br><b>8th rnd:</b> Attach Periwinkle to last joining, ch 3, complete a starting shell in same place, * sc in each shell, shell in each sc to within first sp of next inc shell, work a corner, same as on 4th rnd, in sps of inc shell. Repeat from * 3 more times; shell in each sc, sc in each shell to end of rnd. Join, break off and fasten. Turn. Repeat 5th through 8th rnd 10 more times; then repeat 5th and 6th rnds once more. Break off and fasten. Block to measurements. 
-
-
-
-
-
 <br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
-<br><br>
-
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 </font> 
 </td></tr></table></center>
 </body></html>
