--- a/afghans/wed.html
+++ b/afghans/wed.html
@@ -1,11 +1,9 @@
-
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Wedding Ring Afghan Pattern - Free Crochet Cotton Pattern</title></head>
-<body>
-<center><table width="90%" border="0"><tr><td><br>
+<body><center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=11-ghtCI1fh7prx_XB78Ui-OTJQKHRD0s&export=download&export=download">
 <img src="images/wed.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Wedding Ring Afghan - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Wedding Ring Afghan</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
 <br>COATS & CLARK'S "RED HEART" KNITTING WORSTED, 4 Ply ("Tangle Proof" Pull Out Skeins) : 17 ounces of No. 227 Canary Yellow; 10 ounces of No. 360 Wood Brown and 30 ounces of No. 253 Tangerine. 
 <br>Crochet Hook Size H. 
@@ -21,17 +19,8 @@
 <br><b>Next row:</b> Dec 1 sc over last 2 sc. Break off and fasten. Working along opposite side of center oval, complete other side of motif, starting with first row. 
 <br><b>OUTER MOTIF (Make 48):</b> Work as for Inner Motif, until one Tangerine section has been completed. 
 <br>Block motifs to measurements. Arrange 4 Inner Motifs with 4 Brown corners meeting and sew adjacent side edges neatly together to form a large motif. Make 5 rows of 7 large motifs, sewing edges as before. Sew Outer Motifs, having 10 motifs along each narrow end and 14 motifs along each long end, with 2 Brown corners meeting 2 joined Brown corners along all 4 sides. 
-
 <br><br>
-<img src="images/wed2.jpg" width="350" height="350" border="0">
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
-<br><br>
-
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 </font> 
 </td></tr></table></center>
 </body></html>
-
-
-
-
