--- a/afghans/cal.html
+++ b/afghans/cal.html
@@ -1,11 +1,9 @@
-
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Calico Crochet Afghan Pattern - Free Crochet Cotton Pattern</title></head>
-<body>
-<center><table width="90%" border="0"><tr><td><br>
+<body><center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1M0V93mdwhKnC8t2Vttt1-T78RmGA-kb1&export=download&export=download">
 <img src="images/cal.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="verdana" color="#006699" size="4"><span style="font-weight:bold;">Calico Crochet Pattern</span></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Calico Crochet Afghan</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
 <br>COATS & CLARK'S "RED HEART" KNITTING WORSTED, 4 Ply ("Tangle-Proof" Pull-Out Skeins): 28 ounces of No. 686 Paddy Green and 16 ounces each of No. 253 Tangerine and No. 649 Olive Green. 
 <br>Crochet Hook, Size H. 
@@ -21,19 +19,8 @@ sc in last 4 ch. Join-60 sc. Break off and fasten.
 <br>Using Olive Green and picking-up the back loop only of each sc (front loops remain free on right side), sew 11 x 17 Motifs neatly together. 
 <br><b>BORDER 1st rnd:</b> With right side facing, attach Olive Green to back loop of any corner sc, working in back loop only of each sc, make 2 sc in same place, * sc in each sc across to within next corner sc, 3 sc in corner sc. Repeat from * 2 times more; sc in each remaining sc, sc in same place as first 2 sc. Join. Break off and fasten. <br><b>2nd rnd:</b> With Tangerine repeat first rnd. 3rd and 4th rnds: With Paddy Green repeat first rnd. Press lightly. </font>
 
-<br><br><br>
-<center>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
-     style="display:inline-block;width:940px;height:60px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="7284094464"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script></center>
-<br><br><br>
-<a href="http://www.doilybox.com"><font face="verdana" size="4" color="#648464">HOME</font></a>
-<br><br>
+<br><br><a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
+
 </td></tr></table></center>
 </body></html>
 
