--- a/afghans/ggarden.html
+++ b/afghans/ggarden.html
@@ -1,14 +1,11 @@
-
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Granny's Garden Afghan Pattern - Free Crochet Cotton Pattern</title></head>
-<body>
-<center><table width="90%" border="0"><tr><td><br>
+<body><center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1SzAGTmbBSxchR4uvIj4DRo2MNlKuXCak&export=download&export=download">
 <img src="images/ggarden.jpg" align="right"  width="400" height="425" border="0"></a><img src="images/ggarden2.jpg" align="right"  width="350" height="350"></p>
-<font face="verdana" color="#006699" size="4"><span style="font-weight:bold;">Granny's Garden Afghan Pattern</span></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Granny's Garden Afghan</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-<br>
-COATS & CLARK'S RED HEART KNITTING WORSTED, 4 Ply ("Tangle-Proof" Pull-Out Skeins): 52 ounces of No. 588 Amethyst and 14 ounces each of No. 758 Mid Rose and No. 722 Lt. Pink.
+<br>COATS & CLARK'S RED HEART KNITTING WORSTED, 4 Ply ("Tangle-Proof" Pull-Out Skeins): 52 ounces of No. 588 Amethyst and 14 ounces each of No. 758 Mid Rose and No. 722 Lt. Pink.
 <br>Crochet Hook, Size G. 
 <br>Afghan measures 57 x 77 inches each motif measures 2 1/2 inches square. <br>
 Always be sure to check your gauge before starting afghan. Use any size hook which will obtain the motif measurement above. 
@@ -52,18 +49,6 @@ skip next 3 dc, (ch 1, 3 dc in next ch-1 sp) twice. Repeat from ** across to nex
 <br><b>Fourth Motif Band:</b> Joining 76 motifs, work as for First Motif Band. 
 <br><b>FIFTH BORDER</b> Repeat Third Border. Block to measurements. 
 </font>
-<br><br><br>
-<center>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
-     style="display:inline-block;width:940px;height:60px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="7284094464"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script></center>
-<br><br><br>
-<a href="http://www.doilybox.com"><font face="verdana" size="5" color="#648464">HOME</font></a>
-<br><br>
+<br><br><a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 </td></tr></table></center>
 </body></html>
