--- a/afghans/houndstooth.html
+++ b/afghans/houndstooth.html
@@ -1,14 +1,11 @@
-
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Houndstooth Afghan Pattern - Free Crochet Cotton Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1RsBdWILUfHuRA9QaTev7_TgFTLmKBKVG&export=download&export=download"><img src="images/houndstooth.jpg" align="right"  width="400" height="425" border="0"></a><img src="images/houndstooth2.jpg" width="350" height="350" align="right"></p>
-<font face="verdana" color="#006699" size="4"><span style="font-weight:bold;">Houndstooth Afghan Pattern</span></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Houndstooth Afghan</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-<br>
-
-Crochet Hook, Size K. 
+<br>Crochet Hook, Size K. 
 <br>Afghan measures 50 x 63 inches. 
 <br><b>GAUGE: 8 group sts = 7 inches; 2 rows = 1 inch.</b> Be sure to check your gauge before starting afghan. Use any size hook which will obtain the stitch gauge above. Starting at narrow edge with Paddy Green, ch 122, having 2 ch sts to 1 inch. 
 
@@ -20,19 +17,7 @@ Crochet Hook, Size K.
 <br><b>Edging:</b> With Paddy Green make 2 sc in same sc where last sc was made, work-ing along side edge, make a group st in end st of every Paddy Green row, ending with sl st in first ch of starting chain. Break off and fasten. With right side facing and working along opposite side edge, attach Paddy Green to last ch of starting chain and work to corre-spond with opposite side, ending with sc in same place where first sc of last row was made. Do not break off. 
 <br><b>BORDER</b> Making 3 sc in next sc and at each corner, sc evenly around entire outer edge. Join with sl st to first sc. Break off and fasten. Block to measurements. 
 
-<br><br><br>
-<center>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
-     style="display:inline-block;width:940px;height:60px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="7284094464"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script></center>
-<br><br><br>
-<a href="http://www.doilybox.com"><font face="verdana" size="5" color="#648464">HOME</font></a>
-<br><br>
+<br><br><a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 </td></tr></table></center>
 </body></html>
 
