--- a/afghans/ripplingriver.html
+++ b/afghans/ripplingriver.html
@@ -1,12 +1,10 @@
-
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>Rippling River Afghan Pattern - Free Crochet Cotton Pattern</title></head>
-<body>
-<center><table width="90%" border="0"><tr><td><br>
+<html><head><title>Rippling River Afghan Pattern - Free Crochet Cotton Pattern</title>
+</head><body><center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1XpIwwkhH1UeFim5ECmYOxX05CxSMYujw&export=download&export=download"><img src="images/ripplingriver.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Rippling River Afghan - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Rippling River Afghan</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-CLARK'S BIG BALL MERCERIZED CROCHET, size 20 
+<br>CLARK'S BIG BALL MERCERIZED CROCHET, size 20 
 <br>SINGLE SIZE DOUBLE SIZE 34 balls of White or Ecru. 43 balls of White or Ecru. 
 <br>MILWARD'S STEEL CROCHET HOOK No. 9. 
 <br><b>GAUGE:</b> Each motif measures about 4 1/4 inches square when blocked. For a single size spread about 72 x 106 inches, including edging, make 16 x 24 motifs. For a double size spread, about 90 x 106 inches, including edging, make 20 x 24 motifs. 
@@ -23,14 +21,10 @@ CLARK'S BIG BALL MERCERIZED CROCHET, size 20
 <br><b>4th rnd:</b> Ch 4, a 3-tr cluster in same place as sl st, * ch 4, a 4 tr-cluster in next tr. Repeat from * around, making an extra ch-4 and cluster in center st of each corner sp. Join to tip of 1st cluster made. 
 <br><b>5th rnd:</b> Ch 4, 4 tr in same place as sl st, * ch 4, sc in tip of next cluster, ch 4, 5 tr in tip of next cluster. Repeat from * to corner cluster, ch 4, sc in next sp, ch 4, 5 tr in tip of corner cluster, ch 4, sc in next sp, ch 4, 5 tr in tip of next cluster, ch 4, sc in tip of next cluster and continue thus around. Join to 4th st of ch-4 first made. 
 <br><b>6th rnd:</b> Ch 4, a 2 tr-cluster in same place as sl st, * ch 5, skip 1 tr, make a 3-tr cluster in next tr, ch 5, make a 3-tr cluster in each of next 2 tr. Repeat from * around. Join and fasten off. Block to measurements given. 
-
-
 <br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
-<br><br>
-
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 </font> 
-</td></tr></table></center>
+</td></tr></table>
 </body></html>
 
 
