--- a/afghans/roseinbloom.html
+++ b/afghans/roseinbloom.html
@@ -1,14 +1,11 @@
-
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Rose in Bloom Afghan Pattern - Free Crochet Cotton Pattern</title></head>
-<body>
-<center><table width="90%" border="0"><tr><td><br>
+<body><center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1Dd0D_lw3kKvMD2nNNLngi06TM1ZY4odp&export=download&export=download">
 <img src="images/roseinbloom.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Rose In Bloom Afghan - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Rose in Bloom Afghan</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-<br>
-COATS & CLARK'S RED HEART KNITTING WORSTED, 4 Ply ("Tangle-Proof" Pull-Out Skeins): 32 ounces of No. 588 Amethyst; 30 ounces of No. 990 Roses and 14 ounces of No. 649 Olive Green.
+<br>COATS & CLARK'S RED HEART KNITTING WORSTED, 4 Ply ("Tangle-Proof" Pull-Out Skeins): 32 ounces of No. 588 Amethyst; 30 ounces of No. 990 Roses and 14 ounces of No. 649 Olive Green.
 Crochet Hook, Size G.
 <br>Crochet Hook, Size G. 
 <BR>
@@ -30,8 +27,7 @@ Be sure to check your gauge before starting afghan. Use any size hook which will
 <br><br>
 <img src="images/roseinbloom2.jpg" width="350" height="350">
 <br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
-<br><br>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 
 </font> 
 </td></tr></table></center>
